Remove the requirement for server SSL to have a CA
It's not required, so remove the requirement.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/gensio.5
+++ b/gensio.5
@@ -367,7 +367,7 @@ more certificates.  On a server SSL gensio, it will use this when
 doing
 .I gensio_acc_connect()
 in addition to using it for incoming connections.  This is required
-for client and server.
+for the client.
 
 .TP
 .B cert=<filename>
