Add a way to report authentication though the gensio interface
Add gensio_is_authenticated() and gensio_is_encrypted() and update
the SSL gensio to set these properly.  Also add a way to continue
operation even if authentication fails.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/gensio.5
+++ b/gensio.5
@@ -394,6 +394,13 @@ verify that the server holds a valid certificate.  This removes that
 requirement.  Note that this is not recommended.  Ignored for server
 mode.
 
+.TP
+.B allow-authfail[=true|false]
+Normally if the remote end certificate is not validated, the SSL
+gensio will close the connection.  This allows the open to progress.
+Note that the user should verify that authentication is set using
+gensio_is_authenticated().
+
 Note that if you specify a CA for a server, it will require that the
 client present a valid certificate for the given CA.
 
