Rework gensio_control() to take a data length
Using the strlen of the passed in string was just not a good idea.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/gensio.5
+++ b/gensio.5
@@ -329,10 +329,10 @@ In addition to readbuf, the telnet gensio takes the following options:
 set the size of the write buffer.
 
 .TP
-.B rfc2217=true|false
+.B rfc2217[=true|false]
 enable or disable RFC2217 mode for this gensio.  If this is enabled
 and the remote end of the connection supports RFC2217 also, the gensio
-will be set up as a serial gensio and you can do normal gensio
+will be set up as a serial gensio and you can do normal serial gensio
 handling on it.
 
 .TP
