Add licensing and docs for the newly split up gensiotool parts
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gensiotool.1
+++ b/tools/gensiotool.1
@@ -51,7 +51,7 @@ Generate debugging output.  Specifying more than once increases the output.
 .TP
 .I \-e|\-\-escchar char
 Specify a character to use for the escape character.  Setting it to
-zero disables the escape character.  This can either be a decimal or
+-1 disables the escape character.  This can either be a decimal or
 hexadeximal number or ^x to set a control character.  By default it is
 ^\\ if io1 is the default and stdin is a tty, or disabled otherwise.
 See ESCAPES below for more details on the escape character.  Only handled
