--- a/tools/gensiotool.1
+++ b/tools/gensiotool.1
@@ -80,8 +80,9 @@ Dump serial data for io2.  Ignored if io2 is not a serial gensio.
 .TP
 .B s
 Set the serial port (baud) rate for io2.  Ignored if io2 is not a
-serial gensio.  After this, the serial port speed must be blind typed,
-terminated by a new line.  Use escchar-d to know if you set it right.
+serial gensio.  After this, the serial port speed must be typed,
+terminated by a new line.  Invalid speeds are ignore, use escchar-d to
+know if you set it right.
 .TP
 .B n, o, e
 Set the parity on io2 to none, odd, or even.  Ignored if io2 is not a
