--- a/gensio.5
+++ b/gensio.5
@@ -317,6 +317,11 @@ Instead of starting a program, connect to the running program's stdio.
 This is the same as an accepting stdio gensio, except you don't have
 to go through the accept process.
 
+.TP
+.B stderr-to-stdout
+Send standard error output to standard out instead of having a separate
+channel for it.
+
 .SH "ipmisol"
 
 .B ipmisol[(options)],<openipmi arguments>
