Clean up tool documentation
Add man pages for gtlssh and gtlsshd, clean up other stuff.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gensiotool.1
+++ b/tools/gensiotool.1
@@ -4,7 +4,7 @@
 gensio \- Tool for doing gensio connections
 
 .SH SYNOPSIS
-.B ser2net
+.B gensiotool
 [\-i|--input io1] [\-d|\-\-debug] [\-a|\-\-accepter] [\-\-signature <sig>]
 [\-e|--escchar char] [\-h|\-\-help]
 io2
