Add docs for gtlssh-keygen, clean up a few other docs
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -121,7 +121,7 @@ Set the number of stop bits to 1 or 2 on io2 bits.  Ignored if io2 is
 not RFC2217 capable.
 
 .SH "SEE ALSO"
-gensio(5)
+gensio(5), gtlsshd(1), gtlssh-keygen(1)
 
 .SH "KNOWN PROBLEMS"
 None.
