--- a/tools/gtlssh.1
+++ b/tools/gtlssh.1
@@ -35,6 +35,12 @@ on io1.
 .TP
 .I \-r|\-\-telnet
 Do telnet processing with RFC2217 handling.
+.TP
+.I \-\-nosctp
+Disable SCTP support.
+.TP
+.I \-\-notcp
+Disable TCP support
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
