--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -40,11 +40,20 @@ Set the certificate to use.  Defaults to /etc/gtlssh/gtlsshd.crt.
 .TP
 .I \-\-permit-root
 Allow root logins.  Otherwise root or uid=0 is denied.
+.TP
 .I \-\-no-password
 Do not allow password logins, only certificate-based logins.
+.TP
 .I \-\-oneshot
 Do not fork the program at the beginning or when a connection is
 received.  This allows easier debugging of the program.
+.TP
+.I \-\-nosctp
+Disable SCTP support.
+.TP
+.I \-\-notcp
+Disable TCP support
+.TP
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
