--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -57,6 +57,9 @@ Disable SCTP support.
 .I \-\-notcp
 Disable TCP support
 .TP
+.I \-P|\-\-pidfile file
+Create a standard pidfile using the given filename.
+.TP
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
 .TP
