gtlssh-keygen - Allow common name to be overridden
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -27,6 +27,12 @@ Default keys go here.
 .I \-\-keydir dir
 Location to put the non-default generated keys.  Default is
 $HOME/.gtlssh/keycerts
+.TP
+.I \-\-commonname name
+Set the common name in the certificate.  The default is your username
+for normal certificates and the fully qualified domain name for server
+certificates.
+.TP
 .I \-h|\-\-help
 Help output
 
