Fix some default settings for certauth.
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/gensio.5
+++ b/gensio.5
@@ -228,7 +228,7 @@ See documentation on SCTP for more details.
 A serialdev connection is a local serial port.  The device is a
 .B /dev/xxx
 type, and should be real stream device of some type that normal
-termios work on (except for WRONLY).
+termios work on (except for wronly).
 
 This is, no surprise, a serial gensio.
 
